Attempt to fix overflow x

--- a/standingOnDesign.css
+++ b/standingOnDesign.css
@@ -5,6 +5,11 @@
 box-sizing: border-box;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .clearfix::after {
 content: "";
 clear: both;
@@ -30,7 +35,6 @@ background-color:#f2f2f2;
 
 z-index: 0;
 
-overflow-x: hidden;
 overflow-y: auto;
 }
 
